2008-03-27  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix epam location (thanks to Evgeniy Khramtsov)
	* doc/guide.html: Likewise

2008-03-26  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Support for parallel compilation with 'make -j'
	in multi core CPUs: fix compilation dependencies; compile
	behaviors before other source code. (thanks to Jonathan Schleifer)
	* src/mod_pubsub/Makefile.in: Likewise
	* src/eldap/Makefile.in: Likewise

2008-03-26  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_local.erl: The iq_response table wasn't cloned
	automatically on all nodes which resulted in a single point of
	failure

2008-03-25  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Failure to install epam is not
	critical (EJAB-573). Only try to install epam if pam was enabled
	in configure script (thanks to Etan Reisner)(EJAB-586)

2008-03-24  Badlop  <badlop@process-one.net>

	* doc/guide.tex: mod_vcard_ldap replace NICK with NICKNAME (thanks
	to Andreas Ntaflos)
	* doc/guide.html: Likewise

	* src/msgs/de.msg: Fix irc typo (thanks to Jonathan Schleifer)
	* src/msgs/cs.msg: Likewise
	* src/msgs/pl.msg: Likewise
	* src/msgs/sk.msg: Likewise

2008-03-22  Mickael Remond  <mremond@process-one.net>

	* src/eldap/Makefile.in: Generate ELDAPv3.beam during first Makefile
	pass (EJAB-583).

2008-03-22  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document service_check_from (EJAB-576)
	* doc/guide.html: Likewise

2008-03-21  Badlop  <badlop@process-one.net>

	* src/mod_caps.erl: Move two log calls ERROR_MSG to DEBUG
	* src/shaper.erl: Move log call INFO_MSG to DEBUG

	* doc/guide.tex: Document s2s_default_policy and
	s2s_host (EJAB-575)
	* doc/guide.html: Likewise

2008-03-21  Christophe Romain <christophe.romain@process-one.net>

	* src/pam/epam.erl: Seek epam binary into priv/bin (EJAB-573)
	* src/ejabberd.erl: Likewise
	* src/Makefile.in: Likewise
	* src/ejabberdctl.template: Likewise
	* tools/ejabberdctl: Likewise
